add webm to title

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./index.css" />
-    <title>Lowkey Media Viewer</title>
+    <title>Lowkey Media and WebM Viewer</title>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -57,7 +57,7 @@
   <body>
     <header>
       <img src="logo.png" class="logo" alt="Lowkey Media Viewer Logo" />
-      <h1>Lowkey Media Viewer</h1>
+      <h1>Lowkey Media and WebM Viewer</h1>
       <p class="subTitle">
         A free open source image viewer for viewing and curating images and
         videos really well and nothing more.
@@ -99,8 +99,8 @@
       <h2>Features</h2>
       <p>
         LowKey Media Viewer is a fast and simple image and video viewer for
-        macOS and Windows that supports .jpg, .png, .gif, .mp4, and .webm file
-        types. Designed for a visually rich experience that puts the images
+        macOS and Windows that supports .jpg, .png, .gif, .webp, .mp4, and .webm
+        file types. Designed for a visually rich experience that puts the images
         first with no distractions. Supports easy navigation with Mouse and
         Scrollwheel or Trackpad modes. View entire folders in folder view with
         options for recursive image discovery, sorting, and file type filters.
