--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         videos really well and nothing more.
       </p>
       <p class="info">
-        Works on <span class="os windows">Windows 10</span> and
+        Works on <span class="os windows">Windows</span> and
         <span class="os mac">macOS</span> (Linux Coming Soon!)
       </p>
       <p class="info">
