add webp support info

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       </p>
       <p class="info">
         Supports <span class="fileType jpg">.jpg</span>,
+        <span class="fileType webp">.webp</span>,
         <span class="fileType png">.png</span>,
         <span class="fileType gif">.gif</span>,
         <span class="fileType mp4">.mp4</span>, and
