--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <span class="fileType png">.png</span>,
         <span class="fileType gif">.gif</span>,
         <span class="fileType mp4">.mp4</span>, and
+        <span class="fileType mov">.mov</span> files.
         <span class="fileType webm">.webm</span> files.
       </p>
       <p class="buttonArea">
